--- a/src/app/components/user/login/login.component.css
+++ b/src/app/components/user/login/login.component.css
@@ -122,12 +122,13 @@
 } */
 
 .error-message {
+    width: 100%;
     color: #cc0033;
+    font-size: 14px;
     display: inline-block;
-    font-size: 12px;
     line-height: 15px;
     margin: 5px 0 0;
-    width: 100%;
+    padding-bottom: 0px !important;
 }
 
 .is-invalid {
