--- a/src/app/components/formsparts/user-create/user-create.component.html
+++ b/src/app/components/formsparts/user-create/user-create.component.html
@@ -1,12 +1,7 @@
 <div class="main-content">
     <div class="container-fluid align-content-center">
         <div class="row">
-<<<<<<< Updated upstream
             <div class="col-md-12">
-=======
-            <div class="col-md-8">
-
->>>>>>> Stashed changes
                 <div class="card">
                     <div class="card-header card-header-danger">
                         <h4 class="card-title">{{ id? 'Editar Usuario' : 'Nuevo Usuario'}}
@@ -35,7 +30,7 @@
                                 <div class="form-group col-md-6">
                                     <label for="apellidos">Apellidos*</label>
                                     <!-- porque autor alex -->
-                                    <input type="text" name="autor" class="form-control" placeholder="Apellidos" formControlName="apellidos" [ngClass]="{ 'is-invalid': (submitted && formControls.apellidos.errors && formControls.apellidos.errors.required) || (formControls.apellidos.errors?.required && formControls.apellidos.touched && !submitted) }">
+                                    <input type="text" name="apellidos" class="form-control" placeholder="Apellidos" formControlName="apellidos" [ngClass]="{ 'is-invalid': (submitted && formControls.apellidos.errors && formControls.apellidos.errors.required) || (formControls.apellidos.errors?.required && formControls.apellidos.touched && !submitted) }">
                                     <div *ngIf="(submitted && formControls.apellidos.errors && formControls.apellidos.errors.required) || (formControls.apellidos.errors?.required && formControls.apellidos.touched && !submitted)">
                                         <p class="validate-error">El campo requerido</p>
                                     </div>
@@ -88,8 +83,6 @@
                                         <p class="validate-error">Minimo 5 caracteres</p>
                                     </div>
                                 </div>
-
-<<<<<<< Updated upstream
                                 <div class="form-group col-md-6">
                                     <label for="rol">Rol</label>
                                     <select name="rol" class="custom-select" formControlName="rol" id="rol" [ngClass]="{ 'is-invalid': (submitted && formControls.rol.errors && formControls.rol.errors.required) || (formControls.rol.errors?.required && formControls.rol.touched && !submitted) }">
@@ -101,12 +94,6 @@
                                     </select>
                                     <div *ngIf="(submitted && formControls.rol.errors && formControls.rol.errors.required) || (formControls.rol.errors?.required && formControls.rol.touched && !submitted)" class="validate-error">El campo es requerido
                                     </div>
-=======
-<!--      <form class="form-book" [formGroup]="userFormGroup" (ngSubmit)="onSubmit()">
--->
-          <form>
->>>>>>> Stashed changes
-
                                 </div>
                             </div>
 
