--- a/src/app/components/user/register/register.component.css
+++ b/src/app/components/user/register/register.component.css
@@ -90,12 +90,12 @@
 }
 
 .error-message {
+    width: 100%;
     color: #cc0033;
+    font-size: 14px;
     display: inline-block;
-    font-size: 12px;
     line-height: 15px;
     margin: 5px 0 0;
-    width: 100%;
 }
 
 .card {
@@ -121,13 +121,15 @@
     color: #EFEDF1 !important;
 }
 
+
+/* 
 .error-message {
     width: 100%;
     color: red;
     font-size: 12px;
     display: inline-block;
     margin: 5px 0 0;
-}
+} */
 
 .is-invalid {
     border-color: red;
