Fixed bug at activate account

--- a/src/app/components/activate-account/activate-account.component.html
+++ b/src/app/components/activate-account/activate-account.component.html
@@ -1,1 +1,7 @@
-<p>activate-account works!</p>
+<div class="container">
+    <div class="card">
+        <div class="card-body">
+            <h1 class="d-flex justify-content-center">{{msg}}</h1>
+        </div>
+    </div>
+</div>
