--- a/src/app/components/sucursal/sucursal.component.html
+++ b/src/app/components/sucursal/sucursal.component.html
@@ -1,4 +1,4 @@
 <p>
     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure, fugit. Eaque, minima nihil dolorum, rerum ex nobis earum eius veniam quia ad facere quo dolorem distinctio at culpa voluptatum odit!
 </p>
-<button>ir a</button>
+<button routerLink="/admin/create-sucursal">ir a</button>
