creacion del componente sucursal

--- a/src/app/components/sucursal/sucursal.component.html
+++ b/src/app/components/sucursal/sucursal.component.html
@@ -1,4 +1,116 @@
-<p>
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure, fugit. Eaque, minima nihil dolorum, rerum ex nobis earum eius veniam quia ad facere quo dolorem distinctio at culpa voluptatum odit!
-</p>
-<button routerLink="/admin/create-sucursal">ir a</button>
+<div class="main-content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header card-header-danger">
+                        <div class="ordena">
+                            <h4 class="card-title ">Tabla Sucursales</h4>
+                            <p class="card-category"> Informacion Usuarios</p>
+                        </div>
+                        <!--
+                            <button class="ordena btn btn-success float-right mb-3" type="button" data-toggle="modal"
+                            data-target="#modalUser">Nuevo</button>
+                        -->
+                        <a routerLink="/admin/create-sucursal" routerLinkActive="router-link-active" class="ordena btn btn-success float-right mb-3">Nuevo</a>
+                        <input type="text" value="" class=" float-md-right mr-3 mt-2" placeholder="Search..." [(ngModel)]="keyword" (ngModelChange)="searchByKeyword()">
+                        <div class="dropdown ordena float-md-right mr-3">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                TIPO
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item">Todos</a>
+                                <a class="dropdown-item">Comida nacional</a>
+                                <a class="dropdown-item">Comida internacional</a>
+                                <a class="dropdown-item">Vegetariana</a>
+                                <a class="dropdown-item">Vegana</a>
+                            </div>
+                        </div>
+                        <div class="dropdown ordena float-md-right mr-3">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                10
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item">10</a>
+                                <a class="dropdown-item">25</a>
+                                <a class="dropdown-item">50</a>
+                                <a class="dropdown-item">100</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table">
+                                <thead class=" text-primary">
+                                    <th>
+                                        ID
+                                    </th>
+                                    <th>
+                                        Razon social
+                                    </th>
+                                    <th>
+                                        Telefono
+                                    </th>
+                                    <th>
+                                        Descripcion
+                                    </th>
+                                    <th>
+                                        Tipo
+                                    </th>
+                                    <th>
+                                        Imagen
+                                    </th>
+                                    <th>
+                                        Nit
+                                    </th>
+                                    <th>
+                                        Operaciones
+                                    </th>
+                                </thead>
+                                <tbody>
+                                    <tr *ngFor="let user of users index as i">
+                                        <td scope="row">
+
+                                        </td>
+                                        <td>
+
+                                        </td>
+                                        <td>
+
+                                        </td>
+                                        <td>
+
+                                        </td>
+                                        <td>
+
+                                        </td>
+                                        <td class="text-primary">
+
+                                        </td>
+                                        <th>
+                                            <img alt="" height="50" width="50">
+                                            <img src="/assets/img/faces/sincuenta.png" alt="" height="60" width="60">
+                                        </th>
+                                        <td>
+                                            <!-- <a href="#" class="btn btn-info"><span><i class="fa fa-plus"></i></span></a> -->
+                                            <button type="button" class="btn btn-info" routerLink="/admin/edit-user/{{user.id}}"><span><i
+                                                        class="fa fa-pen"></i></span></button>
+                                            <button type="button" routerLinkActive="router-link-active" class="btn btn-danger" (click)="onDeleteUser(user.id)"><span><i
+                                                        class="fa fa-trash"></i></span></button>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-12 col-md-12 d-flex justify-content-center">
+                                <pagination class="pagination-sm">
+                                </pagination>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
