--- a/src/app/components/formsparts/sucursal-create/sucursal-create.component.html
+++ b/src/app/components/formsparts/sucursal-create/sucursal-create.component.html
@@ -1,1 +1,110 @@
-<p>hola </p>
+<div class="main-content">
+    <div class="container-fluid align-content-center">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header card-header-danger">
+                        <h4 class="card-title">Nombre sucursal
+                            <strong> </strong></h4>
+                        <p class="card-category"> </p>
+                    </div>
+                    <div class="card-body">
+                        <form [formGroup]="userFormGroup" (ngSubmit)="onSubmit()">
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label for="razon_social">Razon social*</label>
+                                    <input type="text" name="razon_social" class="form-control" placeholder="Razon social" formControlName="razon_social" [ngClass]="{ 'is-invalid': (submitted && formControls.razon_social.errors && formControls.razon_social.errors.required) || (formControls.razon_social.errors?.required && formControls.razon_social.touched && !submitted) }">
+                                    <div *ngIf="(submitted && formControls.razon_social.errors && formControls.razon_social.errors.required) && formControls.razon_social.dirty || (formControls.razon_social.errors?.required && formControls.razon_social.touched && !submitted)">
+                                        <p class="validate-error">El campo requerido</p>
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="telefono">Telefono/Celular</label>
+                                    <input name="telefono" class="form-control" placeholder="Telefono" formControlName="telefono" [ngClass]="{ 'is-invalid': (submitted && formControls.telefono.errors && formControls.telefono.errors.required) || (formControls.telefono.errors?.required && formControls.telefono.touched && !submitted) }">
+                                    <div *ngIf="(submitted && formControls.telefono.errors && formControls.telefono.errors.required) || (formControls.telefono.errors?.required && formControls.telefono.touched && !submitted)">
+                                        <p class="validate-error">El campo requerido</p>
+                                    </div>
+                                    <div *ngIf="formControls.telefono.errors?.pattern">
+                                        <p class="validate-error">Caracteres no validos</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label for="descripcion">Descripcion</label>
+                                    <input type="text" name="descripcion" class="form-control" placeholder="Descripcion" formControlName="descripcion" [ngClass]="{ 'is-invalid': (submitted && formControls.descripcion.errors && formControls.descripcion.errors.required) || (formControls.descripcion.errors?.required && formControls.descripcion.touched && !submitted) }">
+                                    <div *ngIf="(submitted && formControls.descripcion.errors && formControls.descripcion.errors.required) || (formControls.descripcion.errors?.required && formControls.descripcion.touched && !submitted)">
+                                        <p class="validate-error">El campo requerido</p>
+                                    </div>
+                                    <div *ngIf="formControls.userName.errors?.pattern">
+                                        <p class="validate-error">Caracteres no validos</p>
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="tipo">Tipo</label>
+                                    <input type="text" name="tipo" class="form-control" placeholder="tipo" formControlName="tipo" [ngClass]="{ 'is-invalid': (submitted && formControls.tipo.errors && formControls.tipo.errors.required) || (formControls.tipo.errors?.required && formControls.tipo.touched && !submitted) }">
+                                    <div *ngIf="(submitted && formControls.tipo.errors && formControls.tipo.errors.required) || (formControls.tipo.errors?.required && formControls.tipo.touched && !submitted)">
+                                        <p class="validate-error">El campo es requerido</p>
+                                    </div>
+                                    <div *ngIf="formControls.tipo.errors?.pattern">
+                                        <p class="validate-error">Caracteres no validos</p>
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="nit">NIT</label>
+                                    <input name="nit" class="form-control" placeholder="nit" formControlName="nit">
+                                    <div *ngIf="(submitted && formControls.nit.errors && formControls.nit.errors.required) || (formControls.nit.errors?.required && formControls.nit.touched && !submitted)">
+                                        <p class="validate-error">El campo es requerido</p>
+                                    </div>
+                                    <div *ngIf="formControls.nit.errors?.pattern">
+                                        <p class="validate-error">Caracteres no validos</p>
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="direccion">Direccion</label>
+                                    <input name="direccion" class="form-control" placeholder="direccion" formControlName="direccion">
+                                    <div *ngIf="(submitted && formControls.direccion.errors && formControls.direccion.errors.required) || (formControls.direccion.errors?.required && formControls.direccion.touched && !submitted)">
+                                        <p class="validate-error">El campo es requerido</p>
+                                    </div>
+                                    <div *ngIf="formControls.direccion.errors?.pattern">
+                                        <p class="validate-error">Caracteres no validos</p>
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="latitud">Latitud</label>
+                                    <input type="text" name="latitud" class="form-control" placeholder="latitud" formControlName="latitud" [ngClass]="{ 'is-invalid': (submitted && formControls.latitud.errors && formControls.latitud.errors.required) || (formControls.latitud.errors?.required && formControls.latitud.touched && !submitted) }">
+                                    <div *ngIf="(submitted && formControls.latitud.errors && formControls.latitud.errors.required) && formControls.latitud.dirty || (formControls.latitud.errors?.required && formControls.latitud.touched && !submitted)">
+                                        <p class="validate-error">El campo requerido</p>
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="longitud">Longitud</label>
+                                    <input type="text" name="longitud" class="form-control" placeholder="longitud" formControlName="longitud" [ngClass]="{ 'is-invalid': (submitted && formControls.longitud.errors && formControls.longitud.errors.required) || (formControls.longitud.errors?.required && formControls.longitud.touched && !submitted) }">
+                                    <div *ngIf="(submitted && formControls.longitud.errors && formControls.longitud.errors.required) && formControls.longitud.dirty || (formControls.longitud.errors?.required && formControls.longitud.touched && !submitted)">
+                                        <p class="validate-error">El campo requerido</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="form-row">
+                                <div class="col-md-6">
+                                    <label for="imagen">Imagen</label>
+                                    <input type="file" name="imagen" class="form-control-file" accept=".png, .jpg, .jpeg" #fileInput (change)="fileProgress($event)">
+                                </div>
+
+                                <div class="col-md-6">
+                                    <div class="d-flex justify-content-center">
+                                        <img *ngIf="imageUrl" [src]="imageUrl" alt="" height="80" width="100">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <button type="submit" class="btn btn-success float-right">Guardar Sucursal</button>
+                            <button class="btn btn-danger float-right" (click)="cancelar()">Cancelar</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
