--- a/src/app/components/user/register/register.component.css
+++ b/src/app/components/user/register/register.component.css
@@ -11,7 +11,7 @@
 .card {
     margin-top: 5% !important;
     margin-bottom: auto;
-    width: 500px;
+    width: 500px !important;
 }
 
 .card-header {
