--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -42,17 +42,28 @@
                         <button class="form-control color-button" type="submit">LOGIN</button>
                     </div>
                 </form>
-                <div class="error-message d-flex justify-content-center">
-                       <h4> {{loginError}}</h4>
+                <div *ngIf="loginError">
+                    <div class="alert alert-danger alert-with-icon" data-notify="container">
+                        <i class="material-icons" data-notify="icon">add_alert</i>
+                        <button mat-button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <i class="material-icons">close</i>
+                        </button>
+                        <div class="d-flex justify-content-center">
+                            <span data-notify="message"> <strong>{{loginError}}</strong></span>
+                        </div>
+                    </div>
                 </div>
+             <!--    <div class="error-message d-flex justify-content-center">
+                       <h4> {{loginError}}</h4>
+                </div> -->
             </div>
             <div class="card-footer">
                 <div class="d-flex justify-content-center links">
-                    Don't have an account?
-                    <a routerLink="/user/register">Sign Up</a>
+                    No tienes una cuenta?
+                    <a routerLink="/user/register">Registrate</a>
                 </div>
                 <div class="d-flex justify-content-center">
-                    <a class="color-text" routerLink="/forgot-password">Forgot password?</a>
+                    <a class="color-text" routerLink="/forgot-password">Olvidaste tu contraseña?</a>
                 </div>
             </div>
         </div>
