--- a/src/app/components/user/register/register.component.html
+++ b/src/app/components/user/register/register.component.html
@@ -5,7 +5,7 @@
                 <h3 class="d-flex justify-content-start color-text-title">Register</h3>
                 <div class="d-flex justify-content-end social_icon">
                     <span><i class="fab fa-facebook-square"></i></span>
-                    <span><i class="fab fa-google-plus-square"></i></span>
+                    <span (click)="signInWithGoogle()"><i class="fab fa-google-plus-square"></i></span>
                     <span><i class="fab fa-twitter-square"></i></span>
                 </div>
             </div>
@@ -16,8 +16,11 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-user"></i></span>
                         </div>
-                        <input type="text" name="nombres" class="form-control" placeholder="Nombres" formControlName="nombres" [ngClass]="{ 'is-invalid': (submitted && formControls.nombres.errors && formControls.nombres.errors.required) || (formControls.nombres.errors?.required && formControls.nombres.touched && !submitted) }">
-                        <div class="error-message d-flex" *ngIf="(submitted && formControls.nombres.errors && formControls.nombres.errors.required) || (formControls.nombres.errors?.required && formControls.nombres.touched && !submitted)">
+                        <input type="text" name="nombres" class="form-control" placeholder="Nombres"
+                            formControlName="nombres"
+                            [ngClass]="{ 'is-invalid': (submitted && formControls.nombres.errors && formControls.nombres.errors.required) || (formControls.nombres.errors?.required && formControls.nombres.touched && !submitted) }">
+                        <div class="error-message d-flex"
+                            *ngIf="(submitted && formControls.nombres.errors && formControls.nombres.errors.required) || (formControls.nombres.errors?.required && formControls.nombres.touched && !submitted)">
                             <p>El campo requerido</p>
                         </div>
                         <div class="error-message d-flex" *ngIf="formControls.nombres.errors?.minlength">
@@ -26,7 +29,8 @@
                         <div class="error-message d-flex" *ngIf="formControls.nombres.errors?.maxlength">
                             <p>Maximo 30 caracteres</p>
                         </div>
-                        <div class="error-message d-flex" *ngIf="formControls.nombres.errors?.pattern && !formControls.nombres.errors?.minlength">
+                        <div class="error-message d-flex"
+                            *ngIf="formControls.nombres.errors?.pattern && !formControls.nombres.errors?.minlength">
                             <p>Caracteres no validos</p>
                         </div>
                     </div>
@@ -34,8 +38,11 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-user"></i></span>
                         </div>
-                        <input type="text" name="apellidos" class="form-control" placeholder="Apellidos" formControlName="apellidos" [ngClass]="{ 'is-invalid': (submitted && formControls.apellidos.errors && formControls.apellidos.errors.required) || (formControls.apellidos.errors?.required && formControls.apellidos.touched && !submitted) }">
-                        <div class="error-message d-flex" *ngIf="(submitted && formControls.apellidos.errors && formControls.apellidos.errors.required) || (formControls.apellidos.errors?.required && formControls.apellidos.touched && !submitted)">
+                        <input type="text" name="apellidos" class="form-control" placeholder="Apellidos"
+                            formControlName="apellidos"
+                            [ngClass]="{ 'is-invalid': (submitted && formControls.apellidos.errors && formControls.apellidos.errors.required) || (formControls.apellidos.errors?.required && formControls.apellidos.touched && !submitted) }">
+                        <div class="error-message d-flex"
+                            *ngIf="(submitted && formControls.apellidos.errors && formControls.apellidos.errors.required) || (formControls.apellidos.errors?.required && formControls.apellidos.touched && !submitted)">
                             <p>El campo requerido</p>
                         </div>
                         <div class="error-message d-flex" *ngIf="formControls.apellidos.errors?.minlength">
@@ -44,7 +51,8 @@
                         <div class="error-message d-flex" *ngIf="formControls.apellidos.errors?.maxlength">
                             <p>Maximo 30 caracteres</p>
                         </div>
-                        <div class="error-message d-flex" *ngIf="formControls.apellidos.errors?.pattern && !formControls.apellidos.errors?.minlength">
+                        <div class="error-message d-flex"
+                            *ngIf="formControls.apellidos.errors?.pattern && !formControls.apellidos.errors?.minlength">
                             <p>Caracteres no validos</p>
                         </div>
                     </div>
@@ -52,8 +60,11 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-user"></i></span>
                         </div>
-                        <input type="text" name="userName" class="form-control" placeholder="Username" formControlName="userName" [ngClass]="{ 'is-invalid': (submitted && formControls.userName.errors && formControls.userName.errors.required) || (formControls.userName.errors?.required && formControls.userName.touched && !submitted) }">
-                        <div class="error-message d-flex" *ngIf="(submitted && formControls.userName.errors && formControls.userName.errors.required) || (formControls.userName.errors?.required && formControls.userName.touched && !submitted)">
+                        <input type="text" name="userName" class="form-control" placeholder="Username"
+                            formControlName="userName"
+                            [ngClass]="{ 'is-invalid': (submitted && formControls.userName.errors && formControls.userName.errors.required) || (formControls.userName.errors?.required && formControls.userName.touched && !submitted) }">
+                        <div class="error-message d-flex"
+                            *ngIf="(submitted && formControls.userName.errors && formControls.userName.errors.required) || (formControls.userName.errors?.required && formControls.userName.touched && !submitted)">
                             <p>El campo requerido</p>
                         </div>
                         <div class="error-message d-flex" *ngIf="formControls.userName.errors?.minlength">
@@ -62,7 +73,8 @@
                         <div class="error-message d-flex" *ngIf="formControls.userName.errors?.maxlength">
                             <p>Maximo 30 caracteres</p>
                         </div>
-                        <div class="error-message d-flex" *ngIf="formControls.userName.errors?.pattern && !formControls.userName.errors?.minlength">
+                        <div class="error-message d-flex"
+                            *ngIf="formControls.userName.errors?.pattern && !formControls.userName.errors?.minlength">
                             <p>Caracteres no validos</p>
                         </div>
                     </div>
@@ -70,8 +82,11 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-user"></i></span>
                         </div>
-                        <input type="email" name="email" class="form-control" placeholder="email@example.com" formControlName="email" [ngClass]="{ 'is-invalid': (submitted && formControls.email.errors && formControls.email.errors.required) || (formControls.email.errors?.required && formControls.email.touched && !submitted) }">
-                        <div class="error-message d-flex" *ngIf="(submitted && formControls.email.errors && formControls.email.errors.required) || (formControls.email.errors?.required && formControls.email.touched && !submitted)">
+                        <input type="email" name="email" class="form-control" placeholder="email@example.com"
+                            formControlName="email"
+                            [ngClass]="{ 'is-invalid': (submitted && formControls.email.errors && formControls.email.errors.required) || (formControls.email.errors?.required && formControls.email.touched && !submitted) }">
+                        <div class="error-message d-flex"
+                            *ngIf="(submitted && formControls.email.errors && formControls.email.errors.required) || (formControls.email.errors?.required && formControls.email.touched && !submitted)">
                             <p>El campo es requerido</p>
                         </div>
                         <div class="error-message d-flex" *ngIf="formControls.email.errors?.email">
@@ -82,8 +97,11 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-unlock-alt"></i></span>
                         </div>
-                        <input type="password" name="password" class="form-control" placeholder="*******" formControlName="password" [ngClass]="{ 'is-invalid': (submitted && formControls.password.errors && formControls.password.errors.required) || (formControls.password.errors?.required && formControls.password.touched && !submitted) }">
-                        <div class="error-message d-flex" *ngIf="(submitted && formControls.password.errors && formControls.password.errors.required) || (formControls.password.errors?.required && formControls.password.touched && !submitted)">
+                        <input type="password" name="password" class="form-control" placeholder="*******"
+                            formControlName="password"
+                            [ngClass]="{ 'is-invalid': (submitted && formControls.password.errors && formControls.password.errors.required) || (formControls.password.errors?.required && formControls.password.touched && !submitted) }">
+                        <div class="error-message d-flex"
+                            *ngIf="(submitted && formControls.password.errors && formControls.password.errors.required) || (formControls.password.errors?.required && formControls.password.touched && !submitted)">
                             <p>El campo es requerido</p>
                         </div>
                         <div class="error-message d-flex" *ngIf="formControls.password.errors?.minlength">
@@ -101,7 +119,8 @@
                         <button mat-button type="button" class="close" data-dismiss="alert" aria-label="Close">
                             <i class="material-icons">close</i>
                         </button>
-                        <span data-notify="message">Ha sido enviado un mensaje de activacion a su correo <strong>{{correo}}</strong></span>
+                        <span data-notify="message">Ha sido enviado un mensaje de activacion a su correo
+                            <strong>{{correo}}</strong></span>
                     </div>
                 </div>
                 <div *ngIf="registerError">
